--- a/package.json
+++ b/package.json
@@ -5,22 +5,48 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "backend": "json-server --watch db.json --port 5000 --delay=1000"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "@popperjs/core": "^2.11.6",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.5.0",
+    "bootstrap-vue": "^2.22.0",
+    "core-js": "^3.16.1",
+    "jquery": "^3.6.1",
+    "jquery-ui": "^1.13.2",
+    "vee-validate": "^4.4.9",
+    "vue": "^3.2.38",
+    "vue-input-facade": "^2.0.1",
+    "vue-material-input": "^1.2.0",
+    "vue-router": "^4.0.11",
+    "vue3-easy-data-table": "^1.4.17",
+    "vuex": "^4.0.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "typescript": "~4.5.5"
+    "@bahmutov/cy-api": "^1.5.0",
+    "@cypress/code-coverage": "^3.9.10",
+    "@testing-library/cypress": "^7.0.7",
+    "@types/jquery": "^3.5.14",
+    "@types/uuid": "^8.3.1",
+    "@types/yup": "^0.29.13",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-e2e-cypress": "^4.5.13",
+    "@vue/cli-plugin-router": "~4.5.13",
+    "@vue/cli-plugin-typescript": "~4.5.13",
+    "@vue/cli-plugin-vuex": "~4.5.13",
+    "@vue/cli-service": "~4.5.13",
+    "@vue/compiler-sfc": "^3.2.1",
+    "concurrently": "^6.2.1",
+    "cypress": "^6.9.1",
+    "istanbul-lib-coverage": "^3.0.0",
+    "json-server": "^0.16.3",
+    "nyc": "^15.1.0",
+    "prettier": "^2.3.2",
+    "typescript": "~4.3.5",
+    "uuid": "^8.3.2"
   }
 }
