--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env"
+      "webpack-env" ,
+      "jquery",
     ],
     "paths": {
       "@/*": [
@@ -24,7 +25,8 @@
       "esnext",
       "dom",
       "dom.iterable",
-      "scripthost"
+      "scripthost",
+      
     ]
   },
   "include": [
