--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "backend": "json-server --watch db.json --port 5000 --delay=1000"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@popperjs/core": "^2.11.6",
+    "@vue/cli": "^5.0.8",
     "axios": "^0.21.1",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.5.0",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.16.1",
+    "g": "^2.0.1",
     "jquery": "^3.6.1",
     "jquery-ui": "^1.13.2",
     "vee-validate": "^4.4.9",
